<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/bg_onboarding_gradient"
                                                   tools:context=".Onboarding">

    <TextView
            android:id="@+id/welcome_string"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="50px"
            app:layout_constraintBottom_toTopOf="@+id/subtitle_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/subtitle_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="550dp"
            android:gravity="center"
            android:text="@string/subtitle_welcome"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/permissions_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/privacy_conditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/privacy_and_condicions"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    <ImageView
            android:id="@+id/logo_onbording"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo_focusguard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/permissions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/privacy_conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    <Button
            android:id="@+id/btn_lets_doit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/button_lets_do_it" />

    <Button
            android:id="@+id/btn_already_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/login_button" />
</LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
